bugfix: edit avatar button too big on tablets

--- a/src/blocks/button.css
+++ b/src/blocks/button.css
@@ -38,7 +38,7 @@
   justify-content: center;
   align-items: flex-end;
   width: 190px;
-  height: 100%;
+  height: 190px;
   background-color: transparent;
   padding-bottom: 12px;
 }
