--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -14,6 +14,8 @@
 
 .profile__avatar {
   width: 190px;
+  height: 190px;
+  object-fit: cover;
   border-radius: 8px;
 }
 
@@ -105,6 +107,7 @@
 @media screen and (max-width: 583px) {
   .profile__avatar {
     width: 80px;
+    height: 80px;
   }
 
   .profile__title {
